# binance-openapi

./: Cargo.toml  README.md  binance-api-swagger.yaml  build.rs
src/: codegen.rs  datetimerfc3339.rs  lib.rs
