[package]
name = "binance-openapi"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
author = "Bernhard Schuster <bernhard@ahoi.io>"
repository = "https://github.com/drahnr/binance-openapi"
description = "Binance _typed_ REST API bindings, generated via progenitor"

[dependencies]
progenitor = "0.7"
progenitor-client = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
base64 = "0.21"
rand = "0.8"
regress = "0.4.1"
futures = "0.3.30"
serde_json = "1.0.117"
fs-err = "2.11.0"
color-eyre = "0.6.3"


[build-dependencies]
schemars = { version = "0.8.21", features = ["chrono", "semver", "uuid", "url", "bytes"] }
serde_yaml = "0.9.34"
prettyplease = "0.2"
progenitor = "0.7"
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
fs-err = "2.11.0"
quote = "1"
color-eyre = "0.6.3"
serde_path_to_error = "0.1.16"


[features]
default = []
genapi = []
